--- a/kanopy/templates/kanopy/kanopy_submissions.html
+++ b/kanopy/templates/kanopy/kanopy_submissions.html
@@ -26,6 +26,12 @@
     <div class="col-lg-8 col-md-10 col-sm-12">
       <div class="card">
         <div class="card-body" id='master-card-body' >
+          <input type="text" id="start_date" >
+          <input type="text" id="end_date" >
+          <br/>          
+          <input id="filter" type="button" value="Filter"></input>
+          
+
           <h3 class="card-title">Submissions</h3>
           
         </div>
@@ -38,36 +44,94 @@
   
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>  
 <script>
-
     
-    // var sjdocs = {{ sjdocs|safe }};
+    var end_upload_date = new Date( Date.now() );
+    // var start_upload_date = new Date( Date.now() );
+    // start_upload_date.setMonth( start_upload_date.getMonth() - 2 );
+    var start_upload_date = new Date('2020-12-01')
+
+    $("#start_date").val( start_upload_date);
+    $("#end_date").val( end_upload_date);
+
+    // Change to date selector
+    $(document).ready(function () {
+      $("#start_date").change(function() {
+        start_upload_date = new Date( $("#start_date").val() );
+      });
+      $("#end_date").change(function() {
+        console.log("Before: " + end_upload_date)
+        end_upload_date = new Date( $("#end_date").val() );
+        console.log("After: " + end_upload_date)
+      });
+
+
+      $("#filter").click(function () {
+          
+          filterCards()
+
+      });       
+    });
+
+    function filterCards() {
+      for (i=0; i<sjdocs.length; i++){
+        var id = sjdocs[i].id;
+        var uploaded_at = new Date(sjdocs[i].uploaded_at);
+        var planting_date = new Date(sjdocs[i].cover_crop_planting_date);
+
+        // If uploaded between start and end then show
+        if (uploaded_at >= start_upload_date && uploaded_at <= end_upload_date){
+          $("#sub-" + sjdocs[i].id).show();
+        } else {
+          $("#sub-" + sjdocs[i].id).hide();
+        }
+      };
+    };    
+    var subfreq = JSON.parse('{{ freq|escapejs }}');
     var sjdocs = JSON.parse('{{ sjdocs|escapejs }}');
-    for (i=0; i<10; i++){
-      $("#div-nodisplay").append(
-        "<img id='src-image-" + sjdocs[i].id + "' src='" + sjdocs[i].image + "' >"
-      );
-    };
     var sub_holder = $("<div/>");
     sub_holder.addClass("col-md-10");
     sub_holder.attr("id", "sub-holder");
-
+    
     function draw() {
-      for (i=0; i<10; i++){
-        console.log("Document number: " + i);
-        console.log("ID number: " + sjdocs[i].id);
-        var canvas = document.getElementById('dst-cnvs-' + sjdocs[i].id);
-        var context = canvas.getContext('2d');
-        var src_img = document.getElementById('src-image-' + sjdocs[i].id);
-        context.drawImage(src_img, 0, 0, src_img.width * 1/5, src_img.height * 1/5);
-        // context.drawImage(src_img, 0, 0, src_img.width, src_img.height,
-        //                             0, 0, canvas.width, canvas.height)
-        };    
+        // To hold the reference to individual images
+        const images = {};
+
+        for (i=0; i<sjdocs.length; i++){
+
+          const subm_obj = {};
+          subm_obj['id'] = sjdocs[i].id;
+          // var sub_id = sjdocs[i].id;
+          console.log("ID: " + subm_obj['id']);
+
+          if(subm_obj['id'] < 20){
+            console.log("Found it.");
+            subm_obj['src_url'] = sjdocs[i].image;
+            subm_obj['dst_cnvs'] = document.getElementById('dst-cnvs-' + subm_obj['id']);
+            subm_obj['ctx'] = subm_obj['dst_cnvs'].getContext('2d');
+            // var src_url = sjdocs[i].image;
+            // var dst_cnvs = document.getElementById('dst-cnvs-' + sub_id);
+            // var ctx = dst_cnvs.getContext('2d');
+
+            // const img = images[sjdocs[i].location_name] = new Image;
+            const img = subm_obj['image'] = new Image;
+            
+            // var img = new Image();
+            img.onload = function() {
+              subm_obj['ctx'].drawImage(img, 64, 64, 192, 192);
+            };          
+            img.src = subm_obj['src_url'];
+            images['location_name'] = subm_obj;
+          };
+
+        };
+        return images;
       };
+
     function showSubmissions() {
       //Remember to wipe away first
 
-      // for (i=0; i<sjdocs.length; i++) {
-      for (i=0; i<10; i++) {
+      for (i=0; i<sjdocs.length; i++) {
+      
 
         var update_url = "groundcover_update/" + sjdocs[i].id;
         var uploaded_at = new Date(sjdocs[i].uploaded_at);
@@ -83,13 +147,13 @@
         
         // console.log(sjdocs[i].location_name);<canvas class="card-img" id="myCanvas" ></canvas>
         sub_holder.append(
-          '<div class="row no-gutters">  <div class="col-sm-5">  <canvas class="card-img" id="dst-cnvs-' + 
+          '<div id="sub-' + id + '" class="card" style="width: 600px;"><div class="row no-gutters">  <div class="col-sm-5">  <canvas class="card-img" id="dst-cnvs-' + 
             id + '" ></canvas>  </div>  <div class="col-sm-7"><div class="card-body"><h5 class="card-title">' + 
               location_name + '</h5> <h6 class="card-subtitle mb-2 text-muted">Uploaded on ' + 
                 uploaded_at.toLocaleDateString() + ', photo taken on ' + 
                   photo_taken_date.toLocaleDateString() + '</h6> <p class="card-text">' + 
                     cover_crop_species_1 + '</p> <a href="' + 
-                    update_url + '" class="btn btn-primary">Open</a> </div>  </div></div>'
+                    update_url + '" class="btn btn-primary">Open</a> </div>  </div></div></div>'
         ); 
       };
       
@@ -97,56 +161,8 @@
     };
     showSubmissions();
     draw();
+    filterCards();  
 
-    var map = L.map('mapid').setView([44.67, -93.17], 7);
-    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
-    }).addTo( map );
-     
-    function onEachFeature(feature, layer) {
-		var popupContent = "<dl><dt>Location name</dt> <dd>" + feature.properties.location_name + "</dd>" +
-				"<dt>Date uploaded</dt> <dd>" + feature.properties.photo_taken_date + "</dd>" +
-                "<dt>Cover crop</dt> <dd>" + feature.properties.cover_crop_species_1 + "</dd>" +
-                "<dt>Photo</dt> <dd>"  + '<img src="' + feature.properties.image_url + '" width="250" height="250">' + "</dd>"
-                + "</dl>";
-
-		if (feature.properties && feature.properties.popupContent) {
-			popupContent += feature.properties.popupContent;
-		}
-
-		layer.bindPopup(popupContent);
-	}
-    
-    var geojsonMarkerOptions = {
-        radius: 8,
-        fillColor: "#ff0000",
-        color: "#000",
-        weight: 1,
-        opacity: 1,
-        fillOpacity: 0.8
-    };
-    
-    var dataurl = '/kanopy_submissions_json';
-    
-    
-    var soilsLayer;
-    var soilsPoints = [];
-    var soilsCircle = $.getJSON(dataurl, function(data) {
-        soilsLayer = data;
-        L.geoJSON(data, {
-            pointToLayer: function (feature, latlng) {
-                soilsPoints.push(latlng);
-                return L.circleMarker(latlng, geojsonMarkerOptions);
-            },
-            
-            
-		    onEachFeature: onEachFeature
-        }).addTo(map);
-        map.fitBounds( soilsPoints );
-     });
-     
-     
-    
 </script> 
 
 
