--- a/kanopy/templates/kanopy/kanopy_submissions.html
+++ b/kanopy/templates/kanopy/kanopy_submissions.html
@@ -43,12 +43,171 @@
   </div>
   
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>  
+<script type="text/javascript" src="https://d3js.org/d3.v6.min.js"></script>
+<script>
+  var data = JSON.parse('{{ freq|escapejs }}');
+
+  var margin = {top: 20, right: 20, bottom: 70, left: 40},
+      width = 500 - margin.left - margin.right,
+      height = 200 - margin.top - margin.bottom;
+
+  // Parse the date / time
+  var	parseDate = d3.timeParse("%Y-%m-%d");
+  var formatDate = d3.timeFormat("%B %d, %Y");
+
+  var x = d3.scaleBand().range([0, width], .05);
+
+  var y = d3.scaleLinear().range([height, 0]);
+
+  var yAxis = d3.axisLeft()
+      .scale(y)
+      .ticks(3);
+
+  var svg = d3.select("#master-card-body").insert("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+      .attr("transform", 
+            "translate(" + margin.left + "," + margin.top + ")");
+  var eventData;
+  var mouseEvent;
+  // d3.csv("total_mileage.csv").then(function(data) {
+  data.forEach(function(d) {
+      d.date = parseDate(d.dt_seq);
+      d.value = +d.num_uploads;
+  });
+
+  x.domain(data.map(function(d) { return d.date; }));
+  y.domain([0, d3.max(data, function(d) { return d.value; })]);
+  
+  // custom invert function
+  x.invert = (function(){
+      var domain = x.domain()
+      var range = x.range()
+      var scale = d3.scaleQuantize().domain(range).range(domain)
+
+      return function(x){
+          return scale(x)
+      }
+  })()
+
+  // Add the brush feature using the d3.brush function
+  var brush = d3.brushX()
+      // initialise the brush area: start at 0,0 and finishes at width,height: it means I select the whole graph area
+      .extent( [ [0,0], [width,height] ] ) 
+      // Each time the brush selection changes, trigger the 'updateDates' function
+      .on("end", updateDates) 
+
+    // Defining xAxis here so that we can
+    //  set tick values...before scales?
+    var xAxis = d3.axisBottom()
+      .tickFormat(d3.timeFormat('%b %d'))
+      //.ticks(d3.timeDay.every(100))
+      .tickValues(x.domain().filter(function(d,i){ return !(i%15)}))   
+      .scale(x);
+    
+    svg.append("g")
+        .attr("class", "x axis")
+        .attr("transform", "translate(0," + height + ")")
+        .call(xAxis)
+        .selectAll("text")  
+              .style("text-anchor", "end")
+              .attr("dx", "-.8em")
+              .attr("dy", ".15em")
+              .attr("transform", "rotate(-15)" );          
+
+    svg.append("g")
+        .attr("class", "y axis")
+        .call(yAxis)
+      .append("text")
+        .attr("transform", "rotate(-90)")
+        .attr("y", 6)
+        .attr("dy", ".71em")
+        .style("text-anchor", "end");
+    
+    svg.append("g")
+        .selectAll("bar")
+        .data(data)
+        .enter().append("rect")
+        .attr("class", "bar")  
+        .on("mouseover", onMouseOver) //Add listener for the mouseover event
+        .on("mouseout", onMouseOut)   //Add listener for the mouseout event      
+        .attr("x", function(d) { return x(d.date); })
+        .attr("width", x.bandwidth())
+        .attr("y", function(d) { return y(d.value); })
+        .attr("height", function(d) { return height - y(d.value); });
+
+        // Add the brushing
+    svg.append("g")
+       .attr("class", "brush")
+       .call(brush);
+
+    //mouseover event handler function
+    // Updating for v6
+    //function onMouseOver(d, i) {
+    function onMouseOver(event, d) {
+        eventData = event;
+        mouseEvent = d;
+        
+        d3.select(this).attr('class', 'highlight');
+        svg.append("text")
+          .attr('class', 'val') 
+          .attr('x', function() {
+              return x(d.date);
+          })
+          .attr('y', function() {
+              return y(d.value) - 15;
+          })
+          .text(function() {
+              return [ formatDate(d.date) + ": " + d.value + " uploads"];  // Value of the text
+          });
+    }
+
+    //mouseout event handler function
+    //mouseover event handler function
+    // Updating for v6
+    //function onMouseOut(d, i) {
+    function onMouseOut(event, d) {
+        // use the text label class to remove label on mouseout
+        d3.select(this).attr('class', 'bar');
+        d3.select(this)
+          .transition()     // adds animation
+          .duration(400)
+          .attr('width', x.bandwidth())
+          .attr("y", function(d) { return y(d.value); })
+          .attr("height", function(d) { return height - y(d.value); });
+
+        d3.selectAll('.val')
+          .remove()
+    }
+
+    function updateDates({selection: extent}) {
+      
+      console.log(extent);
+      var selected_start = x.invert(extent[0]);
+      var selected_end = x.invert(extent[1]);
+      console.log("Start: ", selected_start);
+      console.log("End: ", selected_end);
+      $("#start_date").val( selected_start);
+      $("#end_date").val( selected_end);
+    }
+
+    // Graph title
+    d3.select('svg')
+      .append("text")
+      .attr("x", 10)             
+      .attr("y", margin.top + -5)
+      .attr("font-size", 12)
+      .attr("text-anchor", "left")  
+      .text("Select by submission date");    
+
+</script>
 <script>
     
     var end_upload_date = new Date( Date.now() );
-    // var start_upload_date = new Date( Date.now() );
-    // start_upload_date.setMonth( start_upload_date.getMonth() - 2 );
-    var start_upload_date = new Date('2020-12-01')
+    var start_upload_date = new Date( Date.now() );
+    start_upload_date.setMonth( start_upload_date.getMonth() - 2 );
+    // var start_upload_date = new Date('2020-12-01')
 
     $("#start_date").val( start_upload_date);
     $("#end_date").val( end_upload_date);
@@ -77,16 +236,19 @@
         var id = sjdocs[i].id;
         var uploaded_at = new Date(sjdocs[i].uploaded_at);
         var planting_date = new Date(sjdocs[i].cover_crop_planting_date);
-
+        
         // If uploaded between start and end then show
         if (uploaded_at >= start_upload_date && uploaded_at <= end_upload_date){
+          // console.log("Show sub-" + sjdocs[i].id);
           $("#sub-" + sjdocs[i].id).show();
         } else {
+          // console.log("Hide sub-" + sjdocs[i].id);
           $("#sub-" + sjdocs[i].id).hide();
+          
         }
       };
     };    
-    var subfreq = JSON.parse('{{ freq|escapejs }}');
+    
     var sjdocs = JSON.parse('{{ sjdocs|escapejs }}');
     var sub_holder = $("<div/>");
     sub_holder.addClass("col-md-10");
@@ -101,7 +263,7 @@
           const subm_obj = {};
           subm_obj['id'] = sjdocs[i].id;
           // var sub_id = sjdocs[i].id;
-          console.log("ID: " + subm_obj['id']);
+          // console.log("ID: " + subm_obj['id']);
 
           if(subm_obj['id'] < 20){
             console.log("Found it.");
@@ -164,6 +326,7 @@
     filterCards();  
 
 </script> 
+
 
 
     
