--- a/kanopy/templates/kanopy/submission_barchart.html
+++ b/kanopy/templates/kanopy/submission_barchart.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <!-- https://bl.ocks.org/d3noob/8952219 -->
+<!-- https://observablehq.com/@nightire/column-chart-with-brush -->
+<!-- https://observablehq.com/@bmschmidt/quadtree-brush-optimization -->
 <head>
 	<style>
 
@@ -27,6 +29,8 @@
 </head>
 
 <body>
+  <input type="text" id="start_date" >
+  <input type="text" id="end_date" >
 	
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script> -->
 <script type="text/javascript" src="https://d3js.org/d3.v6.min.js"></script>
@@ -43,6 +47,7 @@
   var formatDate = d3.timeFormat("%B %d, %Y");
 
   var x = d3.scaleBand().range([0, width], .05);
+
   var y = d3.scaleLinear().range([height, 0]);
 
   var yAxis = d3.axisLeft()
@@ -65,6 +70,24 @@
 
   x.domain(data.map(function(d) { return d.date; }));
   y.domain([0, d3.max(data, function(d) { return d.value; })]);
+  
+  // custom invert function
+  x.invert = (function(){
+      var domain = x.domain()
+      var range = x.range()
+      var scale = d3.scaleQuantize().domain(range).range(domain)
+
+      return function(x){
+          return scale(x)
+      }
+  })()
+
+  // Add the brush feature using the d3.brush function
+  var brush = d3.brushX()
+      // initialise the brush area: start at 0,0 and finishes at width,height: it means I select the whole graph area
+      .extent( [ [0,0], [width,height] ] ) 
+      // Each time the brush selection changes, trigger the 'updateDates' function
+      .on("end", updateDates) 
 
     // Defining xAxis here so that we can
     //  set tick values...before scales?
@@ -105,6 +128,11 @@
         .attr("y", function(d) { return y(d.value); })
         .attr("height", function(d) { return height - y(d.value); });
 
+        // Add the brushing
+    svg.append("g")
+       .attr("class", "brush")
+       .call(brush);
+
     //mouseover event handler function
     // Updating for v6
     //function onMouseOver(d, i) {
@@ -143,9 +171,25 @@
         d3.selectAll('.val')
           .remove()
     }
+
+    function updateDates({selection: extent}) {
+      
+      console.log(extent);
+      var selected_start = x.invert(extent[0]);
+      var selected_end = x.invert(extent[1]);
+      console.log("Start: ", selected_start);
+      console.log("End: ", selected_end);
+
+    }
+    d3.select('svg')
+      .append("text")
+      .attr("x", 200)             
+      .attr("y", margin.top)
+      .attr("font-size", 12)
+      .attr("text-anchor", "middle")  
+      .text("Select by submission date");    
   // });
 
-  
 </script>
 
 </body>
