--- a/plotter/templates/plotter/explore_soils_2.html
+++ b/plotter/templates/plotter/explore_soils_2.html
@@ -98,6 +98,7 @@ html, body, #map {
     // d3.json("soilstestdataoriginal.geojson",main);
     // /pull_soils/43.09289799954859/-90.06699085235596/43.10978728318576/-90.04703521728517/
     // d3.json("/pull_soils/-90.06699085235596/43.09289799954859/-90.04703521728517/43.10978728318576/", main);
+    // https://github.com/mapshakers/leaflet-control-window
     addLmaps();
 
     function main(data) {
@@ -123,9 +124,8 @@ html, body, #map {
             d3.json(dataurl, drawFeatures);
           };
 
-          
-
         });
+
         L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
         }).addTo(map);
@@ -133,28 +133,28 @@ html, body, #map {
         //Leaflet
         L.svg({clickable:true}).addTo(map);	
         
-        // Custom control for legend
-        L.Control.lgnd = L.Control.extend({
+        // // Custom control for info box
+        L.Control.info = L.Control.extend({
             onAdd: function(map) {
 
-                var legenddiv = L.DomUtil.create('div', 'custom-control');
-                // legenddiv.style.maxWidth = '260px';
-                legenddiv.style.width = '260px';
-                legenddiv.style.height = '200px';
-                legenddiv.style.background = 'white';
-                legenddiv.id = "legend";
-                legenddiv.innerHTML = "<p>Legend</p>"
+                var infodiv = L.DomUtil.create('div', 'custom-control');
+                // infodiv.style.maxWidth = '260px';
+                infodiv.style.width = '260px';
+                infodiv.style.height = '200px';
+                infodiv.style.background = 'white';
+                infodiv.id = "info";
+                infodiv.innerHTML = "<p>Welcome!<br/>Hold control, click and drag an area to view the soils at depth. The area must be less than 50 square kilometers.</p>"
 
-                return legenddiv;
+                return infodiv;
             },
             onRemove: function(map) {
                 // Nothing to do here
             }
         });
-        L.control.lgnd = function(opts) {
-            return new L.Control.lgnd(opts);
+        L.control.info = function(opts) {
+            return new L.Control.info(opts);
         }
-        L.control.lgnd({ position: 'topright' }).addTo(map);
+        L.control.info({ position: 'topright' }).addTo(map);
 
         // Custom control for controls
         L.Control.cntrlpanel = L.Control.extend({
@@ -162,10 +162,10 @@ html, body, #map {
 
                 var controlsdiv = L.DomUtil.create('div', 'custom-control');
                 controlsdiv.style.width = '240px';
-                controlsdiv.style.height = '200px';
+                controlsdiv.style.height = '450px';
                 controlsdiv.style.background = 'white';
                 controlsdiv.id = "controls";
-                controlsdiv.innerHTML = '<div class="slidecontainer"><p>Select a Depth: <span id="depth_value"></span></p><input type="range" min="0" max="100" value="0" class="slider" id="DepthSlider"></div><p>Select property</p><select id="PropertySelection" class="PropSelector"><option value="drainagecl">Drainage Class</option><option value="sandtotal_r">Sand Percentage</option><option value="silttotal_r">Silt Percentage</option><option value="claytotal_r">Clay Percentage</option><option value="om_r">Organic Matter</option><option value="dbovendry_r">Bulk Density</option><option value="ksat_r">Saturated Conductivity</option><option value="awc_r">Available Water Capacity</option><option value="ph">pH</option></select>';
+                controlsdiv.innerHTML = '<div class="slidecontainer"><p>Select a Depth: <span id="depth_value"></span></p><input type="range" min="0" max="100" value="0" class="slider" id="DepthSlider"></div><p>Select property</p><select id="PropertySelection" class="PropSelector"><option value="drainagecl">Drainage Class</option><option value="sandtotal_r">Sand Percentage</option><option value="silttotal_r">Silt Percentage</option><option value="claytotal_r">Clay Percentage</option><option value="om_r">Organic Matter</option><option value="dbovendry_r">Bulk Density</option><option value="ksat_r">Saturated Conductivity</option><option value="awc_r">Available Water Capacity</option><option value="ph">pH</option></select><div id="legend"></div>';
                 // controlsdiv.innerHTML = '<div class="slidecontainer"><p>Select a Depth: <span id="depth_value"></span></p><input type="range" min="0" max="100" value="0" class="slider" id="DepthSlider"></div>'
                 // controlsdiv.firstChild.onmousedown = L.DomEvent.stopPropagation;
                 $(controlsdiv).mousedown(function () {
@@ -188,12 +188,16 @@ html, body, #map {
         L.control.cntrlpanel({ position: 'topleft' }).addTo(map);
         manageDepthSlider();       
     }
+    // map.selectArea.setCtrlKey(true);
+    // box-zoom will be disabled and you can
+    // start selecting with Shift key pressed
+    // map.selectArea.setCtrlKey(true);              
     
     //To take the d3 object and project for leaflet
     function projectPoint(x, y) {
         var point = map.latLngToLayerPoint(new L.LatLng(y, x));
         this.stream.point(point.x, point.y);
-    }
+    };
 
     var div = d3.select("body").append("div")	
       .attr("class", "tooltip")				
@@ -371,8 +375,8 @@ html, body, #map {
       removeLegend(".nullLegend");
       var svg = d3.select("#legend")
           .append("svg")
-          .style("width", 100)
-          .style("height", 100);
+          .style("width", 250)
+          .style("height", 200);
           
       //var svg = d3.select("#custom-control-panel").select("svg");
       
@@ -463,7 +467,8 @@ html, body, #map {
       var svg = d3.select("#legend svg");
       svg.append("g")
           .attr("class", "legendSoil")
-          .attr("transform", "translate(20,30)");
+          .attr("transform", "translate(20,30)")
+          .style("height", 150);
 
       var legendSoil = d3.legendColor()
           .shapeWidth(30)
