changed pull_soils program to avoid the WFS: now the program writes out no files

--- a/plotter/templates/plotter/explore_soils_2.html
+++ b/plotter/templates/plotter/explore_soils_2.html
@@ -275,8 +275,9 @@ html, body, #map {
       .style("opacity", 0)
       .style("z-index", "999");
   
-
+    var thedata;
     function drawFeatures(data) {
+        thedata = data;
         var svg = d3.select("#map").select("svg")
             .attr("pointer-events", "auto");
         
