--- a/plotter/templates/plotter/explore_soils_2.html
+++ b/plotter/templates/plotter/explore_soils_2.html
@@ -199,7 +199,7 @@ html, body, #map {
                 controlsdiv.style.height = '450px';
                 controlsdiv.style.background = 'white';
                 controlsdiv.id = "controls";
-                controlsdiv.innerHTML = '<button id="info-button">Info</button><div class="slidecontainer"><p>Select a Depth: <span id="depth_value"></span></p><input type="range" min="0" max="200" value="0" class="slider" id="DepthSlider"></div><p>Select property</p><select id="PropertySelection" class="PropSelector"><option value="drainagecl">Drainage Class</option><option value="sandtotal_r">Sand Percentage</option><option value="silttotal_r">Silt Percentage</option><option value="claytotal_r">Clay Percentage</option><option value="om_r">Organic Matter</option><option value="dbovendry_r">Bulk Density</option><option value="ksat_r">Saturated Conductivity</option><option value="awc_r">Available Water Capacity</option><option value="ph">pH</option></select><div id="legend"></div>';
+                controlsdiv.innerHTML = '<button id="info-button">Info</button><div class="slidecontainer"><p>Select a Depth: <span id="depth_value"></span></p><input type="range" min="0" max="200" value="0" class="slider" id="DepthSlider"></div><p>Select property</p><select id="PropertySelection" class="PropSelector"><option value="drainagecl">Drainage Class</option><option value="sandtotal_r">Sand Percentage</option><option value="silttotal_r">Silt Percentage</option><option value="claytotal_r">Clay Percentage</option><option value="om_r">Organic Matter</option><option value="dbovendry_r">Bulk Density</option><option value="ksat_r">Saturated Conductivity</option><option value="awc_r">Available Water Capacity</option><option value="ph">pH</option></select><div id="legend"><svg width="250px" height="200px"></svg></div>';
                 // controlsdiv.innerHTML = '<div class="slidecontainer"><p>Select a Depth: <span id="depth_value"></span></p><input type="range" min="0" max="100" value="0" class="slider" id="DepthSlider"></div>'
                 // controlsdiv.firstChild.onmousedown = L.DomEvent.stopPropagation;
                 $(controlsdiv).mousedown(function () {
@@ -404,6 +404,7 @@ html, body, #map {
     $('body').on('change', '#PropertySelection', function() {
       updateScaleFill();
     });
+    
     $('body').on('click', '#info-button', function() {
       showInfoWindow();
     });
@@ -464,13 +465,12 @@ html, body, #map {
 
     function createNullLgend(){
       removeLegend(".nullLegend");
-      var svg = d3.select("#legend")
-          .append("svg")
-          .style("width", 250)
-          .style("height", 200);
-          
-      //var svg = d3.select("#custom-control-panel").select("svg");
+      // var svg = d3.select("#legend")
+      //     .append("svg")
+      //     .style("width", 250)
+      //     .style("height", 200);
       
+        var svg = d3.select("#legend svg");
       // For representing nulls in the legend. 
       // We just add this legend first and build a 
       //  legend based on the data after.
@@ -554,6 +554,7 @@ html, body, #map {
       // var svg = d3.select("#legend")
       //     .append("svg")
       var svg = d3.select("#legend svg");
+      
       svg.append("g")
           .attr("class", "legendSoil")
           .attr("transform", "translate(20,30)")
