--- a/plotter/templates/plotter/explore_soils_2.html
+++ b/plotter/templates/plotter/explore_soils_2.html
@@ -337,15 +337,26 @@ html, body, #map {
         .range(colorScheme);
 
     // For texture properties
+    // Clay
+    // [ 5.,  8., 12., 15., 20., 23., 27., 30., 39.]
+    // Silt
+    // [ 9., 18., 24., 32., 37., 40., 46., 54., 64.]
+    // Sand
+    // 
     var textureScale = d3.scaleSequential()
       .domain([0, 100])
       // .domain(d3.extent(geojson1.features, d => d.properties['claytotal_r_0cm']))
       .interpolator(d3.interpolateYlOrBr);
 
-    // For OM
-    var orgmatScale = d3.scaleSequential()
-      .domain([0, 8])
-      .interpolator(d3.interpolateGreys);      
+    // For OM, scale _based_ on deciles, 
+    // [0.3, 0.3, 0.4, 0.6, 0.8, 1.3, 2. , 3. , 4.8]
+    var orgmatScale = d3.scaleThreshold()
+      .domain([0.35, 0.6, 0.8, 1.3, 2 , 3 , 4.8, 10])
+      .range(d3.schemeGreys[9]);
+
+    // var orgmatScale = d3.scaleSequential()
+    //   .domain([0, 8])
+    //   .interpolator(d3.interpolateGreys);      
 
     // For AWC
     var awcScale = d3.scaleSequential()
@@ -529,6 +540,7 @@ html, body, #map {
 
     console.log(selected_soil_property_and_depth);
     var selected_soil_property = $('#PropertySelection').val();
+    var is_threshold_scale = false;
     switch (selected_soil_property){
       case 'awc_r':
         colorScale = awcScale;
@@ -544,6 +556,7 @@ html, body, #map {
         break;            
       case 'om_r':
         colorScale = orgmatScale;
+        is_threshold_scale = true;
         break;
       case 'ksat_r':
         colorScale = ksatScale;
@@ -570,8 +583,8 @@ html, body, #map {
         return "#ccc"
       } 
     });
-
-    updateLegend(colorScale);
+    
+    updateLegend(colorScale, is_threshold_scale);
 
   };
     
@@ -579,7 +592,7 @@ html, body, #map {
     d3.select(legendClassName).remove();
   }
 
-  function updateLegend(myscale) {
+  function updateLegend(myscale, threshold=false) {
 
       removeLegend('.legendSoil'); 
       // var svg = d3.select("#legend")
@@ -595,8 +608,12 @@ html, body, #map {
           .shapeWidth(30)
           .cells(6)
           // .orient("horizontal")
-          .scale(myscale) 
+          .scale(myscale)
           // .shapePadding(4)
+
+      if (threshold){
+        legendSoil.labels(d3.legendHelpers.thresholdLabels)
+      }
 
       svg.select(".legendSoil")
           .call(legendSoil);
